src/syntax/generated/SesameParser.cpp

// Generated from SesameParser.g4 by ANTLR 4.7.1


#include "SesameParserListener.h"
#include "SesameParserVisitor.h"

#include "SesameParser.h"


#include <string.h>


using namespace antlrcpp;
using namespace parser;
using namespace antlr4;

SesameParser::SesameParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

SesameParser::~SesameParser() {
  delete _interpreter;
}

std::string SesameParser::getGrammarFileName() const {
  return "SesameParser.g4";
}

const std::vector<std::string>& SesameParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& SesameParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- Compilation_unitContext ------------------------------------------------------------------

SesameParser::Compilation_unitContext::Compilation_unitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SesameParser::Top_defsContext* SesameParser::Compilation_unitContext::top_defs() {
  return getRuleContext<SesameParser::Top_defsContext>(0);
}

std::vector<SesameParser::Import_stmtContext *> SesameParser::Compilation_unitContext::import_stmt() {
  return getRuleContexts<SesameParser::Import_stmtContext>();
}

SesameParser::Import_stmtContext* SesameParser::Compilation_unitContext::import_stmt(size_t i) {
  return getRuleContext<SesameParser::Import_stmtContext>(i);
}


size_t SesameParser::Compilation_unitContext::getRuleIndex() const {
  return SesameParser::RuleCompilation_unit;
}

void SesameParser::Compilation_unitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompilation_unit(this);
}

void SesameParser::Compilation_unitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompilation_unit(this);
}


antlrcpp::Any SesameParser::Compilation_unitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SesameParserVisitor*>(visitor))
    return parserVisitor->visitCompilation_unit(this);
  else
    return visitor->visitChildren(this);
}

SesameParser::Compilation_unitContext* SesameParser::compilation_unit() {
  Compilation_unitContext *_localctx = _tracker.createInstance<Compilation_unitContext>(_ctx, getState());
  enterRule(_localctx, 0, SesameParser::RuleCompilation_unit);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(155);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SesameParser::S_IMPORT) {
      setState(152);
      import_stmt();
      setState(157);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(158);
    top_defs();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Declaration_fileContext ------------------------------------------------------------------

SesameParser::Declaration_fileContext::Declaration_fileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SesameParser::Import_stmtContext *> SesameParser::Declaration_fileContext::import_stmt() {
  return getRuleContexts<SesameParser::Import_stmtContext>();
}

SesameParser::Import_stmtContext* SesameParser::Declaration_fileContext::import_stmt(size_t i) {
  return getRuleContext<SesameParser::Import_stmtContext>(i);
}

std::vector<SesameParser::Declaration_stmtContext *> SesameParser::Declaration_fileContext::declaration_stmt() {
  return getRuleContexts<SesameParser::Declaration_stmtContext>();
}

SesameParser::Declaration_stmtContext* SesameParser::Declaration_fileContext::declaration_stmt(size_t i) {
  return getRuleContext<SesameParser::Declaration_stmtContext>(i);
}


size_t SesameParser::Declaration_fileContext::getRuleIndex() const {
  return SesameParser::RuleDeclaration_file;
}

void SesameParser::Declaration_fileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaration_file(this);
}

void SesameParser::Declaration_fileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaration_file(this);
}


antlrcpp::Any SesameParser::Declaration_fileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SesameParserVisitor*>(visitor))
    return parserVisitor->visitDeclaration_file(this);
  else
    return visitor->visitChildren(this);
}

SesameParser::Declaration_fileContext* SesameParser::declaration_file() {
  Declaration_fileContext *_localctx = _tracker.createInstance<Declaration_fileContext>(_ctx, getState());
  enterRule(_localctx, 2, SesameParser::RuleDeclaration_file);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(163);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SesameParser::S_IMPORT) {
      setState(160);
      import_stmt();
      setState(165);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(169);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SesameParser::S_STRUCT)
      | (1ULL << SesameParser::S_UNION)
      | (1ULL << SesameParser::S_EXTERN)
      | (1ULL << SesameParser::S_CONST)
      | (1ULL << SesameParser::S_TYPEDEF))) != 0)) {
      setState(166);
      declaration_stmt();
      setState(171);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Declaration_stmtContext ------------------------------------------------------------------

SesameParser::Declaration_stmtContext::Declaration_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SesameParser::Func_declContext* SesameParser::Declaration_stmtContext::func_decl() {
  return getRuleContext<SesameParser::Func_declContext>(0);
}

SesameParser::Var_declContext* SesameParser::Declaration_stmtContext::var_decl() {
  return getRuleContext<SesameParser::Var_declContext>(0);
}

SesameParser::Def_constContext* SesameParser::Declaration_stmtContext::def_const() {
  return getRuleContext<SesameParser::Def_constContext>(0);
}

SesameParser::Def_structContext* SesameParser::Declaration_stmtContext::def_struct() {
  return getRuleContext<SesameParser::Def_structContext>(0);
}

SesameParser::Def_unionContext* SesameParser::Declaration_stmtContext::def_union() {
  return getRuleContext<SesameParser::Def_unionContext>(0);
}

SesameParser::S_typedefContext* SesameParser::Declaration_stmtContext::s_typedef() {
  return getRuleContext<SesameParser::S_typedefContext>(0);
}


size_t SesameParser::Declaration_stmtContext::getRuleIndex() const {
  return SesameParser::RuleDeclaration_stmt;
}

void SesameParser::Declaration_stmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaration_stmt(this);
}

void SesameParser::Declaration_stmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaration_stmt(this);
}


antlrcpp::Any SesameParser::Declaration_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SesameParserVisitor*>(visitor))
    return parserVisitor->visitDeclaration_stmt(this);
  else
    return visitor->visitChildren(this);
}

SesameParser::Declaration_stmtContext* SesameParser::declaration_stmt() {
  Declaration_stmtContext *_localctx = _tracker.createInstance<Declaration_stmtContext>(_ctx, getState());
  enterRule(_localctx, 4, SesameParser::RuleDeclaration_stmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(178);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(172);
      func_decl();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(173);
      var_decl();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(174);
      def_const();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(175);
      def_struct();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(176);
      def_union();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(177);
      s_typedef();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Import_stmtContext ------------------------------------------------------------------

SesameParser::Import_stmtContext::Import_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SesameParser::Import_stmtContext::S_IMPORT() {
  return getToken(SesameParser::S_IMPORT, 0);
}

SesameParser::Import_nameContext* SesameParser::Import_stmtContext::import_name() {
  return getRuleContext<SesameParser::Import_nameContext>(0);
}

tree::TerminalNode* SesameParser::Import_stmtContext::SEMI() {
  return getToken(SesameParser::SEMI, 0);
}


size_t SesameParser::Import_stmtContext::getRuleIndex() const {
  return SesameParser::RuleImport_stmt;
}

void SesameParser::Import_stmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImport_stmt(this);
}

void SesameParser::Import_stmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImport_stmt(this);
}


antlrcpp::Any SesameParser::Import_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SesameParserVisitor*>(visitor))
    return parserVisitor->visitImport_stmt(this);
  else
    return visitor->visitChildren(this);
}

SesameParser::Import_stmtContext* SesameParser::import_stmt() {
  Import_stmtContext *_localctx = _tracker.createInstance<Import_stmtContext>(_ctx, getState());
  enterRule(_localctx, 6, SesameParser::RuleImport_stmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(180);
    match(SesameParser::S_IMPORT);
    setState(181);
    import_name();
    setState(182);
    match(SesameParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Import_nameContext ------------------------------------------------------------------

SesameParser::Import_nameContext::Import_nameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SesameParser::NameContext *> SesameParser::Import_nameContext::name() {
  return getRuleContexts<SesameParser::NameContext>();
}

SesameParser::NameContext* SesameParser::Import_nameContext::name(size_t i) {
  return getRuleContext<SesameParser::NameContext>(i);
}

std::vector<tree::TerminalNode *> SesameParser::Import_nameContext::PERIOD() {
  return getTokens(SesameParser::PERIOD);
}

tree::TerminalNode* SesameParser::Import_nameContext::PERIOD(size_t i) {
  return getToken(SesameParser::PERIOD, i);
}


size_t SesameParser::Import_nameContext::getRuleIndex() const {
  return SesameParser::RuleImport_name;
}

void SesameParser::Import_nameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImport_name(this);
}

void SesameParser::Import_nameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImport_name(this);
}


antlrcpp::Any SesameParser::Import_nameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SesameParserVisitor*>(visitor))
    return parserVisitor->visitImport_name(this);
  else
    return visitor->visitChildren(this);
}

SesameParser::Import_nameContext* SesameParser::import_name() {
  Import_nameContext *_localctx = _tracker.createInstance<Import_nameContext>(_ctx, getState());
  enterRule(_localctx, 8, SesameParser::RuleImport_name);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(184);
    name();
    setState(189);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SesameParser::PERIOD) {
      setState(185);
      match(SesameParser::PERIOD);
      setState(186);
      name();
      setState(191);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NameContext ------------------------------------------------------------------

SesameParser::NameContext::NameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SesameParser::NameContext::IDENTIFIER() {
  return getToken(SesameParser::IDENTIFIER, 0);
}


size_t SesameParser::NameContext::getRuleIndex() const {
  return SesameParser::RuleName;
}

void SesameParser::NameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterName(this);
}

void SesameParser::NameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitName(this);
}


antlrcpp::Any SesameParser::NameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SesameParserVisitor*>(visitor))
    return parserVisitor->visitName(this);
  else
    return visitor->visitChildren(this);
}

SesameParser::NameContext* SesameParser::name() {
  NameContext *_localctx = _tracker.createInstance<NameContext>(_ctx, getState());
  enterRule(_localctx, 10, SesameParser::RuleName);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(192);
    match(SesameParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_declContext ------------------------------------------------------------------

SesameParser::Func_declContext::Func_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SesameParser::Func_declContext::S_EXTERN() {
  return getToken(SesameParser::S_EXTERN, 0);
}

SesameParser::TyperefContext* SesameParser::Func_declContext::typeref() {
  return getRuleContext<SesameParser::TyperefContext>(0);
}

SesameParser::NameContext* SesameParser::Func_declContext::name() {
  return getRuleContext<SesameParser::NameContext>(0);
}

tree::TerminalNode* SesameParser::Func_declContext::LPAREN() {
  return getToken(SesameParser::LPAREN, 0);
}

SesameParser::ParamsContext* SesameParser::Func_declContext::params() {
  return getRuleContext<SesameParser::ParamsContext>(0);
}

tree::TerminalNode* SesameParser::Func_declContext::RPAREN() {
  return getToken(SesameParser::RPAREN, 0);
}

tree::TerminalNode* SesameParser::Func_declContext::SEMI() {
  return getToken(SesameParser::SEMI, 0);
}


size_t SesameParser::Func_declContext::getRuleIndex() const {
  return SesameParser::RuleFunc_decl;
}

void SesameParser::Func_declContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunc_decl(this);
}

void SesameParser::Func_declContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunc_decl(this);
}


antlrcpp::Any SesameParser::Func_declContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SesameParserVisitor*>(visitor))
    return parserVisitor->visitFunc_decl(this);
  else
    return visitor->visitChildren(this);
}

SesameParser::Func_declContext* SesameParser::func_decl() {
  Func_declContext *_localctx = _tracker.createInstance<Func_declContext>(_ctx, getState());
  enterRule(_localctx, 12, SesameParser::RuleFunc_decl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(194);
    match(SesameParser::S_EXTERN);
    setState(195);
    typeref();
    setState(196);
    name();
    setState(197);
    match(SesameParser::LPAREN);
    setState(198);
    params();
    setState(199);
    match(SesameParser::RPAREN);
    setState(200);
    match(SesameParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_declContext ------------------------------------------------------------------

SesameParser::Var_declContext::Var_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SesameParser::Var_declContext::S_EXTERN() {
  return getToken(SesameParser::S_EXTERN, 0);
}

SesameParser::TypeContext* SesameParser::Var_declContext::type() {
  return getRuleContext<SesameParser::TypeContext>(0);
}

SesameParser::NameContext* SesameParser::Var_declContext::name() {
  return getRuleContext<SesameParser::NameContext>(0);
}

tree::TerminalNode* SesameParser::Var_declContext::SEMI() {
  return getToken(SesameParser::SEMI, 0);
}


size_t SesameParser::Var_declContext::getRuleIndex() const {
  return SesameParser::RuleVar_decl;
}

void SesameParser::Var_declContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar_decl(this);
}

void SesameParser::Var_declContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar_decl(this);
}


antlrcpp::Any SesameParser::Var_declContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SesameParserVisitor*>(visitor))
    return parserVisitor->visitVar_decl(this);
  else
    return visitor->visitChildren(this);
}

SesameParser::Var_declContext* SesameParser::var_decl() {
  Var_declContext *_localctx = _tracker.createInstance<Var_declContext>(_ctx, getState());
  enterRule(_localctx, 14, SesameParser::RuleVar_decl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(202);
    match(SesameParser::S_EXTERN);
    setState(203);
    type();
    setState(204);
    name();
    setState(205);
    match(SesameParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Top_defsContext ------------------------------------------------------------------

SesameParser::Top_defsContext::Top_defsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SesameParser::Def_funcContext *> SesameParser::Top_defsContext::def_func() {
  return getRuleContexts<SesameParser::Def_funcContext>();
}

SesameParser::Def_funcContext* SesameParser::Top_defsContext::def_func(size_t i) {
  return getRuleContext<SesameParser::Def_funcContext>(i);
}

std::vector<SesameParser::Def_varsContext *> SesameParser::Top_defsContext::def_vars() {
  return getRuleContexts<SesameParser::Def_varsContext>();
}

SesameParser::Def_varsContext* SesameParser::Top_defsContext::def_vars(size_t i) {
  return getRuleContext<SesameParser::Def_varsContext>(i);
}

std::vector<SesameParser::Def_constContext *> SesameParser::Top_defsContext::def_const() {
  return getRuleContexts<SesameParser::Def_constContext>();
}

SesameParser::Def_constContext* SesameParser::Top_defsContext::def_const(size_t i) {
  return getRuleContext<SesameParser::Def_constContext>(i);
}

std::vector<SesameParser::Def_structContext *> SesameParser::Top_defsContext::def_struct() {
  return getRuleContexts<SesameParser::Def_structContext>();
}

SesameParser::Def_structContext* SesameParser::Top_defsContext::def_struct(size_t i) {
  return getRuleContext<SesameParser::Def_structContext>(i);
}

std::vector<SesameParser::Def_unionContext *> SesameParser::Top_defsContext::def_union() {
  return getRuleContexts<SesameParser::Def_unionContext>();
}

SesameParser::Def_unionContext* SesameParser::Top_defsContext::def_union(size_t i) {
  return getRuleContext<SesameParser::Def_unionContext>(i);
}

std::vector<SesameParser::S_typedefContext *> SesameParser::Top_defsContext::s_typedef() {
  return getRuleContexts<SesameParser::S_typedefContext>();
}

SesameParser::S_typedefContext* SesameParser::Top_defsContext::s_typedef(size_t i) {
  return getRuleContext<SesameParser::S_typedefContext>(i);
}


size_t SesameParser::Top_defsContext::getRuleIndex() const {
  return SesameParser::RuleTop_defs;
}

void SesameParser::Top_defsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTop_defs(this);
}

void SesameParser::Top_defsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SesameParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTop_defs(this);
}


antlrcpp::Any SesameParser::Top_defsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SesameParserVisitor*>(visitor))
    return parserVisitor->visitTop_defs(this);
  else
    return visitor->visitChildren(this);
}

SesameParser::Top_defsContext* SesameParser::top_defs() {
  Top_defsContext *_localctx = _tracker.createInstance<Top_defsContext>(_ctx, getState());
  enterRule(_localctx, 16, SesameParser::RuleTop_defs);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(215);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SesameParser::S_VOID)
      | (1ULL << SesameParser::S_CHAR)
      | (1ULL << SesameParser::S_SHORT)
      | (1ULL << SesameParser::S_INT)
      | (1ULL << SesameParser::S_LONG)
      | (1ULL << SesameParser::S_STRUCT)
      | (1ULL << SesameParser::S_UNION)
      | (1ULL << SesameParser::S_STATIC)
      | (1ULL << SesameParser::S_CONST)
      | (1ULL << SesameParser::S_UNSIGNED)
      | (1ULL << SesameParser::S_TYPEDEF))) != 0) || _la == SesameParser::IDENTIFIER) {
      setState(213);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
      case 1: {
        setState(207);
        def_func();
        break;
      }

      case 2: {
        setState(208);
        def_vars();
        break;
      }

      case 3: {
        setState(209);
        def_const();
        break;
      }

      case 4: {
        setState(210);
        def_struct();
        break;
      }

      case 5: {
        setState(211);
        def_union();
        break;
      }

      case 6: {
        setState(212);
        s_typedef();
        break;
      }
